Fix hero block overflow: remove 100vw width, use 100% to stay within container

--- a/assets/style.css
+++ b/assets/style.css
@@ -1427,6 +1427,7 @@
 .event-o-hero {
     position: relative;
     width: 100%;
+    max-width: 100%;
     margin-bottom: 2rem;
     overflow: hidden;
     filter: none !important;
@@ -1436,10 +1437,10 @@
 
 /* Full width breakout when alignfull is selected */
 .event-o-hero.alignfull {
-    width: 100vw;
-    max-width: 100vw;
-    margin-left: calc(50% - 50vw);
-    margin-right: calc(50% - 50vw);
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /* Kill blur/filter on ALL ancestors when hero is present */
